--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+<link rel="icon" href="https://raw.githubusercontent.com/shreeecreation/StickifyImages/refs/heads/main/nuts.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Premium Dry Fruits | Fresh & Natural | Order on WhatsApp</title>
     <meta name="description" content="Premium quality dry fruits - almonds, cashews, dates, pistachios & more. Fresh, natural, and healthy. Order now via WhatsApp for instant delivery." />
