--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Premium Dry Fruits | Fresh & Natural | Order on WhatsApp">
+    <meta name="description"
+      content="Premium quality dry fruits - almonds, cashews, dates, pistachios & more. Fresh, natural, and healthy. Order now via WhatsApp for instant delivery.">
+    <meta name="image"
+      content="https://raw.githubusercontent.com/shreeecreation/StickifyImages/refs/heads/main/almonds.jpg" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/">
+    <meta property="og:title" content="Premium Dry Fruits | Fresh & Natural | Order on WhatsApp">
+    <meta property="og:description"
+      content="Premium quality dry fruits - almonds, cashews, dates, pistachios & more. Fresh, natural, and healthy. Order now via WhatsApp for instant delivery.">
+    <meta property="og:image"
+      content="https://raw.githubusercontent.com/shreeecreation/StickifyImages/refs/heads/main/almonds.jpg">
+
 <link rel="icon" href="https://raw.githubusercontent.com/shreeecreation/StickifyImages/refs/heads/main/nuts.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Premium Dry Fruits | Fresh & Natural | Order on WhatsApp</title>
